# keepassxc

./: .clang-format  .gitattributes  CHANGELOG.md  CMakeLists.txt  release-tool.py  vcpkg-configuration.json  vcpkg.json
.github/: CONTRIBUTING.md
.github/workflows/: codeql.yml
cmake/: FindPCSC.cmake  MacOSCodesign.cmake.in
docs/: GettingStarted.adoc  UserGuide.adoc
docs/topics/: .sharedheader  AutoType.adoc  BrowserIntegration.adoc  DatabaseOperations.adoc  KeyboardShortcuts.adoc  PasswordGenerator.adoc  Reference.adoc  SSHAgent.adoc
share/: CMakeLists.txt
share/branding/: keepassxc-icon.ai
share/linux/: appimage-apprun.sh  org.keepassxc.KeePassXC.appdata.xml
share/macosx/: Assets.car  Info.plist.cmake
share/translations/: keepassxc_ar.ts  keepassxc_be.ts  keepassxc_bg.ts  keepassxc_cs.ts  keepassxc_de.ts  keepassxc_el.ts  keepassxc_en.ts  keepassxc_en_GB.ts  keepassxc_en_US.ts  keepassxc_es.ts  keepassxc_et.ts  keepassxc_fi.ts  keepassxc_fil.ts  keepassxc_fr.ts  keepassxc_fr_CA.ts  keepassxc_he.ts  keepassxc_hu.ts  keepassxc_id.ts  keepassxc_it.ts  keepassxc_ja.ts  keepassxc_km.ts  keepassxc_ko.ts  keepassxc_lt.ts  keepassxc_my.ts  keepassxc_nb.ts  keepassxc_nl.ts  keepassxc_pl.ts  keepassxc_pt_BR.ts  keepassxc_pt_PT.ts  keepassxc_ro.ts  keepassxc_ru.ts  keepassxc_si.ts  keepassxc_sk.ts  keepassxc_sq.ts  keepassxc_sr.ts  keepassxc_sv.ts  keepassxc_th.ts  keepassxc_tr.ts  keepassxc_uk.ts  keepassxc_zh_CN.ts  (+1 more)
src/: CMakeLists.txt  main.cpp
src/autotype/: AutoType.cpp  AutoType.h  AutoTypeAction.cpp  AutoTypeAction.h  AutoTypePlatform.h  AutoTypePlatformPlugin.h  AutoTypeSelectDialog.cpp  AutoTypeSelectDialog.ui  CMakeLists.txt  PickcharsDialog.cpp
src/autotype/mac/: AutoTypeMac.cpp  AutoTypeMac.h
src/autotype/test/: AutoTypeTest.cpp  AutoTypeTest.h  AutoTypeTestInterface.h
src/autotype/wayland/: AutoTypeWayland.cpp  AutoTypeWayland.h  CMakeLists.txt
src/autotype/windows/: AutoTypeWindows.cpp  AutoTypeWindows.h
src/autotype/xcb/: AutoTypeXCB.cpp  AutoTypeXCB.h
src/browser/: BrowserAccessControlDialog.cpp  BrowserAccessControlDialog.h  BrowserAccessControlDialog.ui  BrowserPasskeys.cpp  BrowserPasskeys.h  BrowserPasskeysConfirmationDialog.cpp  BrowserService.cpp  NativeMessageInstaller.cpp  PasskeyUtils.cpp  PasskeyUtils.h
src/cli/: DatabaseInfo.cpp  Diceware.cpp  Merge.cpp
src/core/: Config.cpp  Config.h  CustomData.cpp  Database.cpp  Entry.cpp  Entry.h  EntryAttachments.cpp  EntryAttributes.cpp  EntryAttributes.h  EntrySearcher.cpp  EntrySearcher.h  Group.cpp  Group.h  InactivityTimer.cpp  InactivityTimer.h  Merger.cpp  Merger.h  PassphraseGenerator.cpp  PassphraseGenerator.h  Resources.cpp  Resources.h  Tools.cpp  Tools.h  Translator.cpp
src/format/: BitwardenReader.cpp  ProtonPassReader.cpp
src/gui/: AboutDialog.cpp  Application.cpp  ApplicationSettingsWidget.cpp  ApplicationSettingsWidget.h  ApplicationSettingsWidgetGeneral.ui  Clipboard.cpp  DatabaseOpenDialog.cpp  DatabaseOpenWidget.cpp  DatabaseOpenWidget.h  DatabaseOpenWidget.ui  DatabaseTabWidget.cpp  DatabaseWidget.cpp  DatabaseWidget.h  EditWidgetProperties.cpp  EditWidgetProperties.ui  EntryPreviewWidget.cpp  EntryPreviewWidget.ui  GuiTools.cpp  GuiTools.h  IconDownloader.cpp  IconDownloader.h  Icons.cpp  (+16 more)
tests/: CMakeLists.txt  TestAutoType.cpp  TestAutoType.h  TestBrowser.cpp  TestBrowser.h  TestCli.cpp  TestConfig.cpp  TestConfig.h  TestEntry.cpp  TestEntry.h  TestEntrySearcher.cpp  TestEntrySearcher.h  TestImports.cpp  TestMerge.cpp  TestPasskeys.cpp  TestPassphraseGenerator.cpp  TestTools.cpp  TestTools.h  TestUrlTools.cpp  TestUrlTools.h
(+102 files in other folders)
